import org.gradle.internal.os.OperatingSystem

plugins {
    id "org.jetbrains.gradle.plugin.idea-ext" version "1.0"
}

apply plugin: 'java'

java {
    sourceCompatibility = JavaVersion.VERSION_11
    targetCompatibility = JavaVersion.VERSION_11
}

repositories {
    mavenCentral()
}

sourceSets.main.java.srcDirs = ['../../../java']
if (!OperatingSystem.current().isMacOsX()) {
    sourceSets.main.java.excludes += ['org/cef/browser/mac/**']
}

sourceSets.test.java.srcDirs = ['../../../java_tests']

compileJava.options.compilerArgs += [
    '--module-path', "$projectDir/../../../third_party/jogamp/jar",
    '--add-modules', 'jogl.all,gluegen.rt',
    '--add-exports', 'jogl.all/com.jogamp.nativewindow=jcef',
    '--add-exports', 'jogl.all/com.jogamp.opengl.awt=jcef',
    '--add-exports', 'jogl.all/com.jogamp.opengl=jcef',
    '--add-exports', 'jogl.all/com.jogamp.opengl.util=jcef',
    '--add-exports', 'java.desktop/sun.awt=jcef',
    '--add-exports', 'java.desktop/java.awt.peer=jcef',
    '--add-exports', 'java.desktop/sun.lwawt.macosx=jcef',
    '--add-exports', 'java.desktop/sun.lwawt=jcef']

var jbr_java = test.executable
var jbr_javac = ""
if (OperatingSystem.current().isWindows() && project.hasProperty('jbr_win')) {
    jbr_java = jbr_win + '/bin/java.exe'
    jbr_javac = jbr_win + '/bin/javac.exe'
} else if (OperatingSystem.current().isMacOsX() && project.hasProperty('jbr_mac')) {
    jbr_java = jbr_mac + '/bin/java'
    jbr_javac = jbr_mac + '/bin/javac'
} else if (OperatingSystem.current().isLinux() && project.hasProperty('jbr_linux')) {
    jbr_java = jbr_linux + '/bin/java'
    jbr_javac = jbr_linux + '/bin/javac'
}

if (jbr_javac != "") {
    compileJava.options.fork = true
    compileJava.options.forkOptions.executable = jbr_javac

    compileTestJava.options.fork = true
    compileTestJava.options.forkOptions.executable = jbr_javac
}

test {
    useJUnitPlatform()
    include 'tests/junittests/**'

    failFast = true
    jvmArgs = ['-Djcef.junittests.isGradleLauncher=true']
    executable = jbr_java
}

dependencies {
    implementation files(
        "$projectDir/../../../third_party/jogamp/jar/jogl-all.jar",
        "$projectDir/../../../third_party/jogamp/jar/gluegen-rt.jar")
    testImplementation files(
        "$projectDir/../../../third_party/junit/junit-platform-console-standalone-1.4.2.jar",
        "$projectDir/../../../third_party/jakarta/jakarta.xml.bind-api-2.3.2.jar")
}
